--- a/src/main/resources/templates/check_delete_spisok.html
+++ b/src/main/resources/templates/check_delete_spisok.html
@@ -7,8 +7,23 @@
     <title>Удаление списка покупок</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
 </head>
+<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+    <div class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none bg-danger"></div>
+
+    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="#" class="nav-link px-4 link-secondary border-bottom rounded-3 border-3 border-dark">Все Списки</a></li>
+        <li><a href="#" class="nav-link px-4 link-dark">Список на сегодня</a></li>
+
+        <li><a href="#" class="nav-link px-4 link-dark">FAQs</a></li>
+        <li><a href="#" class="nav-link px-4 link-dark">О разработчике</a></li>
+    </ul>
+
+    <div class="col-md-3 text-end">
+        <button type="button" class="btn btn-outline-primary me-2">Login</button>
+        <button type="button" class="btn btn-primary">Sign-up</button>
+    </div>
+</header>
 <body>
 <div class="album py-5 bg-light">
     <div class="container-fluid">
