--- a/src/main/resources/templates/start_page_shopList.html
+++ b/src/main/resources/templates/start_page_shopList.html
@@ -11,13 +11,25 @@
 
 </head>
 
+<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+    <div class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none bg-danger"></div>
+
+    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="#" class="nav-link px-4 link-secondary border-bottom rounded-3 border-3 border-dark">Все Списки</a></li>
+        <li><a href="#" class="nav-link px-4 link-dark">Список на сегодня</a></li>
+
+        <li><a href="#" class="nav-link px-4 link-dark">FAQs</a></li>
+        <li><a href="#" class="nav-link px-4 link-dark">О разработчике</a></li>
+    </ul>
+
+    <div class="col-md-3 text-end">
+        <button type="button" class="btn btn-outline-primary me-2">Login</button>
+        <button type="button" class="btn btn-primary">Sign-up</button>
+    </div>
+</header>
+
 <body>
 <div class="container g-5 bg-white" >
-
-    <a href="/" class="d-flex align-items-center flex-shrink-0 p-3 link-dark text-decoration-none border-bottom">
-        <svg class="bi me-2" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-        <span class="fs-5 fw-semibold">List group</span>
-    </a>
 
     <div class="row align-items-center mb-3 border-bottom scrollarea align-self-start" th:each="spisok: ${spisokShop}">
         <div class="col-md-8">
