Реализовани функционал удаления списка из вех спсиков продуктов + отоброжение списка продуктов актуальных на сегодняшний день.

--- a/src/main/resources/templates/shop-list.html
+++ b/src/main/resources/templates/shop-list.html
@@ -13,7 +13,7 @@
     <div class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none bg-danger"></div>
 
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-4 link-dark">Все Списки</a></li>
+        <li><a th:href="@{'/startPage'}" class="nav-link px-4 link-dark">Все Списки</a></li>
         <li><a href="#" class="nav-link px-4 link-dark">Список на сегодня</a></li>
         <li><a href="#" class="nav-link px-4 link-secondary border-bottom rounded-3 border-3 border-dark" th:text="${nameShoppingList}"></a></li>
         <li><a href="#" class="nav-link px-4 link-dark">FAQs</a></li>
