--- a/src/main/resources/templates/start_page_shopList.html
+++ b/src/main/resources/templates/start_page_shopList.html
@@ -15,8 +15,8 @@
     <div class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none bg-danger"></div>
 
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-4 link-secondary border-bottom rounded-3 border-3 border-dark">Все Списки</a></li>
-        <li><a href="#" class="nav-link px-4 link-dark">Список на сегодня</a></li>
+        <li><a th:href="@{'/startPage'}" class="nav-link px-4 link-secondary border-bottom rounded-3 border-3 border-dark">Все Списки</a></li>
+        <li><a th:href="@{'/startPageToDay'}" class="nav-link px-4 link-dark">Список на сегодня</a></li>
 
         <li><a href="#" class="nav-link px-4 link-dark">FAQs</a></li>
         <li><a href="#" class="nav-link px-4 link-dark">О разработчике</a></li>
@@ -47,7 +47,7 @@
             </form>
         </div>
         <div class="col-6 col-md-2">
-            <form method="get" th:action="@{'delete/' + ${spisok.getId()} + '/check'}">
+            <form method="post" th:action="@{'deleteCurrentList/' + ${spisok.getId()} + '/check'}">
                 <button type="submit" class="btn btn-danger" >Удалить</button>
             </form>
         </div>
