--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,12 +15,12 @@
         <form method="post" action="/login">
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control border-2 border-bottom border-info" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input type="email" name="username" class="form-control border-2 border-bottom border-info" id="exampleInputEmail1" aria-describedby="emailHelp">
                 <div id="emailHelp" class="form-text">Введите свой e-mail.</div>
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control border-2 border-bottom border-info" id="exampleInputPassword1" aria-describedby="PasswordHelp">
+                <input type="password" name="password" class="form-control border-2 border-bottom border-info" id="exampleInputPassword1" aria-describedby="PasswordHelp">
                 <div id="PasswordHelp" class="form-text">Введите пароль.</div>
             </div>
             <div class="justify-content-around align-content-between">
@@ -30,6 +30,9 @@
 
             <button type="submit" class="btn btn-primary">войти</button>
         </form>
+        <div th:if="${error}">
+            <p>Не вверный пароль или логин</p>
+        </div>
     </div>
 </div>
 
