--- a/src/main/resources/templates/registry_page.html
+++ b/src/main/resources/templates/registry_page.html
@@ -33,6 +33,9 @@
         <input type="password" name="pass2" class="form-control border-2 border-bottom border-info" id="exampleInputPassword1" aria-describedby="PassworRdHelp">
         <div id="PasswordRHelp" class="form-text">Повторите пароль.</div>
       </div>
+      <div th:text="${ExceptionError}">
+
+      </div>
       <button type="submit" class="btn btn-primary">Зарегистрировать</button>
     </form>
 
