Добавлена логика отправки повторного письма + Работа с конкретными списками

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,7 +25,7 @@
                 <div id="PasswordHelp" class="form-text">Введите пароль.</div>
             </div>
             <div class="justify-content-around align-content-between">
-                <a href="#">Зарегестрироваться</a>
+                <a href="/registry">Зарегестрироваться</a>
                 <a href="#">Забыли пароль</a>
             </div>
 
