--- a/src/main/resources/templates/page_send_mail.html
+++ b/src/main/resources/templates/page_send_mail.html
@@ -13,10 +13,18 @@
     <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light" th:text=" 'Регистрация пользователя ' + ${email}"></h1>
         <p class="lead text-muted" th:text="'На указанную почту ' + ${email} + ' было отправлено письмо. Для продолжения регистрации перейдите, пожалуйста, по этой ссылке.'"></p>
-        <p>
-            <a href="#" class="btn btn-primary my-2">Отправить повторно</a>
-            <a href="#" class="btn btn-secondary my-2">Отменить регистрацию</a>
-        </p>
+            <p>
+                <form method="post" th:action="@{'registry/auth/repiet_mail'}">
+                    <input type="submit" class="btn btn-primary my-2" value="Отправить повторно">
+                    <input type="hidden" name="email" th:value="${email}">
+                    <input type="hidden" name="code" th:value="${code}">
+                </form>
+                <form method="post" th:action="@{'auth/cancel_mail'}">
+                    <input type="submit" class="btn btn-secondary my-2" value="Отменить регистрацию">
+                    <input type="hidden" name="email" th:value="${email}">
+                </form>
+            </p>
+
     </div>
 </div>
 </body>
