Список шоплистов привязан к активному пользователю.

--- a/src/main/resources/templates/eddit_shopList.html
+++ b/src/main/resources/templates/eddit_shopList.html
@@ -16,7 +16,7 @@
     <li><a th:href="@{'/startPage'}" class="nav-link px-4 link-dark">Все Списки</a></li>
     <li><a href="#" class="nav-link px-4 link-dark">Список на сегодня</a></li>
       <li><a href="#" class="nav-link px-4 link-secondary border-bottom rounded-3 border-3 border-dark" th:text="${nameSpisok}"></a></li>
-    <li><a href="#" class="nav-link px-4 link-dark">FAQs</a></li>
+    <li><a href="#" class="nav-link px-4 link-dark">Инструкция</a></li>
     <li><a href="#" class="nav-link px-4 link-dark">О разработчике</a></li>
   </ul>
 
