--- a/src/main/resources/templates/check_delete_spisok.html
+++ b/src/main/resources/templates/check_delete_spisok.html
@@ -24,11 +24,11 @@
             <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle show" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="true">
                 <button alt="nickname" width="32" height="32" class="btn btn-info text-capitalize rounded-circle" th:text="">text</button>
             </a>
-            <ul class="dropdown-menu text-small show" aria-labelledby="dropdownUser1" style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate(0px, 34px);" data-popper-placement="bottom-start">
-                <li><a class="dropdown-item" href="#">Settings</a></li>
-                <li><a class="dropdown-item" href="#">Profile</a></li>
+            <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1" style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate(0px, 34px);" data-popper-placement="bottom-start">
+                <li><a class="dropdown-item" href="#">Настройка</a></li>
+                <li><a class="dropdown-item" href="#">Профиль</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Sign out</a></li>
+                <li><a class="dropdown-item" href="#">Выйти</a></li>
             </ul>
         </div>
     </div>
